# LineIn

./: .gitignore  LICENSE  README.md  build_debug.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/andresfelipecaicedo/linein/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  PassthroughEngine.cpp  PassthroughEngine.h  jni_bridge.cpp
app/src/main/java/dev/andresfelipecaicedo/linein/: AudioPassthroughService.kt  MainActivity.kt  PassthroughEngine.kt
app/src/main/java/dev/andresfelipecaicedo/linein/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/andresfelipecaicedo/linein/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
